// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Isolated Server Header <Searchbar /> matches snapshot 1`] = `
<Fragment>
  <Form
    inline={false}
    onSubmit={[Function]}
  >
    <InputGroup
      className="searchbar-ig"
      id="header-searchbar-ig"
    >
      <InputGroupPrepend>
        <DropdownButton
          id="searchbar-dropdown"
          title="Txn/Addr"
        >
          <DropdownItem
            as={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "displayName": "SafeAnchor",
                "render": [Function],
              }
            }
            disabled={false}
            onClick={[Function]}
          >
            Txn/Addr
          </DropdownItem>
          <DropdownItem
            as={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "displayName": "SafeAnchor",
                "render": [Function],
              }
            }
            disabled={false}
            onClick={[Function]}
          >
            Tx Block
          </DropdownItem>
        </DropdownButton>
      </InputGroupPrepend>
      <FormControl
        autoFocus={false}
        onChange={[Function]}
        placeholder="Search for a transaction or an address"
        type="text"
        value=""
      />
      <InputGroupAppend>
        <Button
          active={false}
          disabled={false}
          type="submit"
          variant="primary"
        >
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  512,
                  512,
                  Array [],
                  "f002",
                  "M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z",
                ],
                "iconName": "search",
                "prefix": "fas",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
        </Button>
      </InputGroupAppend>
    </InputGroup>
  </Form>
</Fragment>
`;

exports[`Isolated Server Non-Header <Searchbar /> matches snapshot 1`] = `
<Fragment>
  <Form
    inline={false}
    onSubmit={[Function]}
  >
    <InputGroup
      className="searchbar-ig"
      id="searchbar-ig"
    >
      <InputGroupPrepend>
        <DropdownButton
          id="searchbar-dropdown"
          title="Txn/Addr"
        >
          <DropdownItem
            as={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "displayName": "SafeAnchor",
                "render": [Function],
              }
            }
            disabled={false}
            onClick={[Function]}
          >
            Txn/Addr
          </DropdownItem>
          <DropdownItem
            as={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "displayName": "SafeAnchor",
                "render": [Function],
              }
            }
            disabled={false}
            onClick={[Function]}
          >
            Tx Block
          </DropdownItem>
        </DropdownButton>
      </InputGroupPrepend>
      <FormControl
        autoFocus={true}
        onChange={[Function]}
        placeholder="Search for a transaction or an address"
        type="text"
        value=""
      />
      <InputGroupAppend>
        <Button
          active={false}
          disabled={false}
          type="submit"
          variant="primary"
        >
          <div>
            Search
          </div>
        </Button>
      </InputGroupAppend>
    </InputGroup>
  </Form>
</Fragment>
`;

exports[`Non-Isolated Server Header <Searchbar /> matches snapshot 1`] = `
<Fragment>
  <Form
    inline={false}
    onSubmit={[Function]}
  >
    <InputGroup
      className="searchbar-ig"
      id="header-searchbar-ig"
    >
      <InputGroupPrepend>
        <DropdownButton
          id="searchbar-dropdown"
          title="Txn/Addr"
        >
          <DropdownItem
            as={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "displayName": "SafeAnchor",
                "render": [Function],
              }
            }
            disabled={false}
            onClick={[Function]}
          >
            Txn/Addr
          </DropdownItem>
          <DropdownItem
            as={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "displayName": "SafeAnchor",
                "render": [Function],
              }
            }
            disabled={false}
            onClick={[Function]}
          >
            Tx Block
          </DropdownItem>
          <DropdownItem
            as={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "displayName": "SafeAnchor",
                "render": [Function],
              }
            }
            disabled={false}
            onClick={[Function]}
          >
            DS Block
          </DropdownItem>
        </DropdownButton>
      </InputGroupPrepend>
      <FormControl
        autoFocus={false}
        onChange={[Function]}
        placeholder="Search for a transaction or an address"
        type="text"
        value=""
      />
      <InputGroupAppend>
        <Button
          active={false}
          disabled={false}
          type="submit"
          variant="primary"
        >
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  512,
                  512,
                  Array [],
                  "f002",
                  "M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z",
                ],
                "iconName": "search",
                "prefix": "fas",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
        </Button>
      </InputGroupAppend>
    </InputGroup>
  </Form>
</Fragment>
`;

exports[`Non-Isolated Server Non-Header <Searchbar /> matches snapshot 1`] = `
<Fragment>
  <Form
    inline={false}
    onSubmit={[Function]}
  >
    <InputGroup
      className="searchbar-ig"
      id="searchbar-ig"
    >
      <InputGroupPrepend>
        <DropdownButton
          id="searchbar-dropdown"
          title="Txn/Addr"
        >
          <DropdownItem
            as={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "displayName": "SafeAnchor",
                "render": [Function],
              }
            }
            disabled={false}
            onClick={[Function]}
          >
            Txn/Addr
          </DropdownItem>
          <DropdownItem
            as={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "displayName": "SafeAnchor",
                "render": [Function],
              }
            }
            disabled={false}
            onClick={[Function]}
          >
            Tx Block
          </DropdownItem>
          <DropdownItem
            as={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "displayName": "SafeAnchor",
                "render": [Function],
              }
            }
            disabled={false}
            onClick={[Function]}
          >
            DS Block
          </DropdownItem>
        </DropdownButton>
      </InputGroupPrepend>
      <FormControl
        autoFocus={true}
        onChange={[Function]}
        placeholder="Search for a transaction or an address"
        type="text"
        value=""
      />
      <InputGroupAppend>
        <Button
          active={false}
          disabled={false}
          type="submit"
          variant="primary"
        >
          <div>
            Search
          </div>
        </Button>
      </InputGroupAppend>
    </InputGroup>
  </Form>
</Fragment>
`;
